@@ -1,3 +1,10 @@
+2011-05-18  Nick Clifton  <nickc@redhat.com>
+
+	PR binutils/12753
+	* lib/utils-lib.exp (run_dump_test): Allow nm as a program.
+	* binutils-all/nm.exp: Test running "nm -g" on an object file
+	containing a unique symbol.
+
 2011-05-13  Alan Modra  <amodra@gmail.com>
 
 	* binutils-all/objcopy.exp objcopy_text): Remove xfails for sh-rtems
